--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/gioxx/MarvellousSuspender/issues"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -44,6 +44,7 @@
     "time-grunt": "~1.2.1"
   },
   "dependencies": {
-    "db.js": "^0.15.0"
+    "db.js": "^0.15.0",
+    "globals": "^16.2.0"
   }
 }
