--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,8 @@
     "cookies"
   ],
   "background": {
-    "service_worker": "js/background.js"
+    "service_worker": "js/background.js",
+    "type": "module"
   },
 
   "action": {
