Fix popup to use sendMessage to invoke methods
The popup cannot access the background service worker, and importing
modules are treated as local state.  So, sendMessage lets us talk to
the service worked and use its state.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/gioxx/MarvellousSuspender/issues"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.326",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^10.2.1",
