--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
   "env": {
     "browser": true,
     "es2020": true,
-    "webextensions": true
+    "webextensions": true,
+    "serviceworker": true
   },
   "extends": [
     "eslint:recommended",
