--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,6 +9,7 @@
     "history",
     "contextMenus",
     "cookies",
+    "favicon",
     "scripting"
   ],
   "host_permissions": [
@@ -47,7 +48,7 @@
   },
   "incognito": "split",
   "manifest_version": 3,
-  "minimum_chrome_version": "108",
+  "minimum_chrome_version": "110",
   "commands": {
     "1-suspend-tab": {
       "description": "__MSG_ext_cmd_toggle_tab_suspension_description__",
