Convert suspend timers to Alarms API
This conversion removes the need to persist the per-tab timer data,
so references STATE_TIMER_DETAILS have been removed.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,13 +4,14 @@
   "version": "8.0.0.0",
   "default_locale": "en",
   "permissions": [
-    "tabs",
-    "storage",
-    "history",
+    "alarms",
     "contextMenus",
     "cookies",
     "favicon",
-    "scripting"
+    "history",
+    "scripting",
+    "storage",
+    "tabs"
   ],
   "host_permissions": [
     "https://*/*",
