Add tabGroups to session recovery storage

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,8 @@
     "history",
     "scripting",
     "storage",
-    "tabs"
+    "tabs",
+    "tabGroups"
   ],
   "host_permissions": [
     "https://*/*",
