Go to "Sessions Management" faster 😄
This update provides a direct link to the Session Management page within the extension's main menu (in the toolbar), within the context menu (right-click), and within the available Shortcuts.
Fix for #116 #224

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -85,6 +85,9 @@
     },
     "6-unsuspend-all-windows": {
       "description": "__MSG_ext_cmd_unsuspend_all_windows_description__"
+    },
+    "7-open_session_history": {
+      "description": "__MSG_html_recovery_go_to_session_manager__"
     }
   }
 }
