--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-crx": "^2.0.0",
     "grunt-string-replace": "^1.3.3",
-    "time-grunt": "^2.0.0"
+    "time-grunt": "^2.0.0",
+    "typescript-eslint": "^8.43.0"
   },
   "dependencies": {
     "db.js": "^0.15.0"
